Mobile Overflow Fix

--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@
 
 body {
     margin: 0;
+}
+
+div {
+    position: relative;
     height: 100vh;
     width: 100vw;
     overflow-y: hidden;
